latex bis DC-DC

--- a/Template/DiplomarbeitLaTex.tex
+++ b/Template/DiplomarbeitLaTex.tex
@@ -8,15 +8,22 @@
 \usepackage{bibgerm}       		% german references
 \usepackage{graphicx} 				% it's recommended to use PDF images but you can use JPG or PNG as well
 \usepackage{url}           		% format URLs
-\usepackage{hyperref} 				% create hyperlinks
+\usepackage[hidelinks]{hyperref} 				% create hyperlinks
+\usepackage{textcomp}
+\usepackage{multicol}
 \usepackage{listings, color}	% for source code
 \usepackage{subfig}						% two figures next to each other (example: figure 3a), figure 3b)
-\usepackage{scrpage2}					% header and footer line
+\usepackage{scrpage2}
+\usepackage{amsfonts}
+\usepackage{booktabs}
+\usepackage{siunitx}
+\usepackage{amsmath}
+					% header and footer line
 
 % header and footer line - no header & footer line on pages where a new chapter starts
 \pagestyle{scrheadings}
 \ohead{Design and Implementation of X}
-\ihead{Your Name}
+\ihead{Pavel Grigorev}
 \ofoot[]{\thepage}
 \ifoot{Diploma Thesis, TU Berlin, Fachgebiet AV, 2009}
 
