--- a/Template/bib/references.bib
+++ b/Template/bib/references.bib
@@ -46,3 +46,63 @@
   note = {\url{http://www.w3.org/TR/wsdl}}
 }
 
+
+
+
+@misc{1,
+  title = {{Bruce Yost}.  Power },
+  autor = {Bruce Yost},
+  howpublished = {\url{https://sst-soa.arc.nasa.gov/03-power}},
+  note = {Accessed: 2020-02-19}
+}
+
+@misc{2,
+	title = {{Alia-Novobilsk}.  Advanced multi-junction solar cells deliver high efficiency, reduced costs for space },
+	autor = {Alia-Novobilski},
+	howpublished = {\url{https://phys.org/news/2018-01-advanced-multi-junction-solar-cells-high.html#jCp}},
+	note = {Accessed: 2020-02-19}
+}
+
+@misc{3,
+	title = {Conference Record of the Twenty-Ninth IEEE Photovoltaic Specialists Conference, 2002., New Orleans, LA, USA, 2002, pp. 1330-1334. (Third generation photovoltaics: comparative evaluation of advanced solar conversion options,)}
+	author = {M. A. Green},
+	note = {Accessed: 2020-02-20}
+}
+
+@misc{4,
+	title = {30% Triple Junction GaAs Solar Cell Type: TJ Solar Cell 3G30C },
+	autor = {AZUR SPACE Solar Power GmbH},
+	howpublished = {\url{http://www.azurspace.com/images/products/0004148-00-01_DB_GBK_80%C2%B5m.pdf}},
+	note = {Accessed: 2020-02-20}
+}
+
+@misc{5,
+	title = {Effect of Temperature },
+	autor = {Christiana Honsberg and Stuart Bowden},
+	howpublished = {\url{https://www.pveducation.org/pvcdrom/solar-cell-operation/effect-of-temperature}},
+	note = {Accessed: 2020-02-21}
+}
+
+@misc{6,
+	Author = {Briß Klaus},
+	Institution = {TU Berlin},
+	Howpublished = {Satellite Technology},
+	Year = {2018},
+	Title = {Electrical Power Subsystem}
+}
+@misc{7,
+        title = {What’s the Best Battery},
+        autor = {Battery University},
+        howpublished = {\url{https://batteryuniversity.com/learn/archive/whats_the_best_battery}},
+        note = {Accessed: 2020-02-22}
+
+}
+
+@article{article,
+	author = {Santoni, Fabio and Tortora, Paolo and Alessandrini, F. and Passerini, Stefano},
+	year = {2002},
+	month = {04},
+	pages = {653},
+	title = {Commercial Li-Ion Batteries for Nanosatellite Applications - a Flight Experiment},
+	volume = {502}
+}
