--- a/Template/misc/acronyms.tex
+++ b/Template/misc/acronyms.tex
@@ -54,5 +54,7 @@ WSDL	\>	Web Service Description Language \\
 XCAP	 \> 	XML Configuration Access Protocol	 \\
 XDMS	 \> 	XML Document Management Server	 \\
 XML	 \> 	Extensible Markup Language	 \\
+EPS \>      Electrical Power System\\
+MPPT \>    Maximum Power Point Tracking\\
 \end{tabbing}
 \endinput
