--- a/Template/bib/references.bib
+++ b/Template/bib/references.bib
@@ -70,7 +70,7 @@
 }
 
 @misc{4,
-	title = {30% Triple Junction GaAs Solar Cell Type: TJ Solar Cell 3G30C },
+	title = {30 Triple Junction GaAs Solar Cell Type: TJ Solar Cell 3G30C },
 	autor = {AZUR SPACE Solar Power GmbH},
 	howpublished = {\url{http://www.azurspace.com/images/products/0004148-00-01_DB_GBK_80%C2%B5m.pdf}},
 	note = {Accessed: 2020-02-20}
@@ -84,7 +84,7 @@
 }
 
 @misc{6,
-	Author = {Briß Klaus},
+	Author = {Brieß Klaus},
 	Institution = {TU Berlin},
 	Howpublished = {Satellite Technology},
 	Year = {2018},
@@ -97,8 +97,48 @@
         note = {Accessed: 2020-02-22}
 
 }
+@misc{8,
+	title = {POWER STORAGE FOR SMALL SATELLITES: COMPARISON OF NIH2 AND LIION BATTERIES},
+	autor = {R. Wenige, M. Schilbach, P.F. Weidner},
+	howpublished = {\url{https://www.dlr.de/iaa.symp/Portaldata/49/Resources/dokumente/archiv5/1103_Wenige.pdf}},
+	note = {Accessed: 2020-02-23}
+	
+}
 
-@article{article,
+@misc{9,
+	title = {Saft VT D NiCd},
+	autor = {Akku Shop},
+	howpublished = {\url{https://www.akkushop.de/de/saft-vt-d-nicd-mono-akku-hochtemperatur-ca.-603mm-x-323mm/}},
+	note = {Accessed: 2020-02-24}
+	
+}
+
+@misc{10,
+	title = {Batteries in Space},
+	autor = {Battery center},
+	howpublished = {\url{https://www.upsbatterycenter.com/blog/batteries-space/}},
+	note = {Accessed: 2020-02-25}
+	
+}
+
+@misc{11,
+	title = {18650 battery 3.7 Li-ion},
+	autor = {Ebay},
+	howpublished = {\url{https://www.ebay.de/itm/18650-Battery-3-7V-3000mAh-Li-ion-Rechargeable-Cell-For-Headlamp-Torch-Radio-D8-/254352951966}},
+	note = {Accessed: 2020-02-25}
+	
+}
+
+@misc{12,
+	title = {Renata ICP303450PA LiPo},
+	autor = {Conrad},
+	howpublished = {\url{https://www.conrad.de/de/p/renata-icp303450pa-spezial-akku-prismatisch-kabel-lipo-3-7-v-500-mah-1214020.html?WT.mc_id=google_pla&WT.srch=1&ef_id=Cj0KCQiAwP3yBRCkARIsAABGiPp-kEbfaUMu4N7Z-01Uy28KpGE9v4nHiCX5T7MrBQiYGYc0SRUbBRwaAh88EALw_wcB:G:s&gclid=Cj0KCQiAwP3yBRCkARIsAABGiPp-kEbfaUMu4N7Z-01Uy28KpGE9v4nHiCX5T7MrBQiYGYc0SRUbBRwaAh88EALw_wcB&hk=SEM&s_kwcid=AL!222!3!326955887699!!!g!!}},
+	note = {Accessed: 2020-02-25}
+	
+}
+
+
+@article{13,
 	author = {Santoni, Fabio and Tortora, Paolo and Alessandrini, F. and Passerini, Stefano},
 	year = {2002},
 	month = {04},
@@ -106,3 +146,47 @@
 	title = {Commercial Li-Ion Batteries for Nanosatellite Applications - a Flight Experiment},
 	volume = {502}
 }
+
+
+@misc{14,
+	title = {Charging Lithium-ion},
+	autor = {Isidor Buchmann},
+	howpublished = {\url{https://batteryuniversity.com/learn/article/charging_lithium_ion_batteries}},
+	note = {Accessed: 2020-02-25}
+	
+}
+
+
+@misc{15,
+	title = {MAX745},
+	autor = {Maxim integrated },
+	howpublished = {\url{https://datasheets.maximintegrated.com/en/ds/MAX745.pdf}},
+	note = {Accessed: 2020-02-26}
+	
+}
+
+@misc{16,
+	title = {Li-ion cell protection},
+	autor = {Digikey},
+	howpublished = {\url{https://www.digikey.com/en/maker/blogs/lithium-ion-cell-protection}},
+	note = {Accessed: 2020-02-30}
+	
+}
+
+@article{17,
+	author = { Jussi Hemmo},
+	year = {2013},
+	month = {11},
+	pages = {95},
+	title = {Electrical Power Systems for Finnish Nanosatellites},
+	volume = {100}
+
+}
+
+@BOOK{18,
+	title = {Halbleiter-Schaltungstechnik},
+	publisher = {Springer-Verlag},
+	year = {1990},
+	author = {U.Tietze. Ch.Schenk},
+	note = {ISBN: 3-540-19475-4}
+
