--- a/Template/bib/references.bib
+++ b/Template/bib/references.bib
@@ -189,4 +189,27 @@
 	year = {1990},
 	author = {U.Tietze. Ch.Schenk},
 	note = {ISBN: 3-540-19475-4}
+}
+	@misc{19,
+	title = {LMZ14202EXT},
+	autor = {Texas Instrumentals},
+	howpublished = {\url{http://www.ti.com/lit/ds/symlink/lmz14202ext.pdf}},
+	note = {Accessed: 2020-03-6}
+}
 
+@article{20,
+	author = {Martin Oredsson},
+	year = {2010},
+	month = {09},
+	pages = {187},
+	title = {Electrical Power Systemfor theCubeSTAR Nanosatellite},
+	volume = {254}
+	
+}
+
+	@misc{21,
+		title = {Power Distribution Unit},
+		autor = {European Space Agency, Dr József Szabó},
+		howpublished = {\url{https://www.esa.int/Education/ESEO/Power_Distribution_Unit}},
+		note = {Accessed: 2020-03-6}
+	}
