voll erste Teil

--- a/Template/bib/references.bib
+++ b/Template/bib/references.bib
@@ -213,3 +213,11 @@
 		howpublished = {\url{https://www.esa.int/Education/ESEO/Power_Distribution_Unit}},
 		note = {Accessed: 2020-03-6}
 	}
+	
+	@inproceedings{22,
+		author = {Shafique, Armughan and Shabir, Arslan and Shabbir, Noman and Iqbal, Muhammad Naveed},
+		year = {2015},
+		month = {11},
+		pages = {},
+		title = {Power Distribution System for PNSS-1 Cubical Satellite}
+	}
