--- a/Template/DiplomarbeitLaTex.tex
+++ b/Template/DiplomarbeitLaTex.tex
@@ -6,11 +6,13 @@
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman, english]{babel}
 \usepackage{bibgerm}       		% german references
-\usepackage{graphicx} 				% it's recommended to use PDF images but you can use JPG or PNG as well
+\usepackage{graphicx} 
+				% it's recommended to use PDF images but you can use JPG or PNG as well
 \usepackage{url}           		% format URLs
 \usepackage[hidelinks]{hyperref} 				% create hyperlinks
 \usepackage{textcomp}
-\usepackage{multicol}
+
+\usepackage{multicol,caption}
 \usepackage{listings, color}	% for source code
 \usepackage{subfig}						% two figures next to each other (example: figure 3a), figure 3b)
 \usepackage{scrpage2}
