--- a/Template/bib/references.bib
+++ b/Template/bib/references.bib
@@ -221,3 +221,10 @@
 		pages = {},
 		title = {Power Distribution System for PNSS-1 Cubical Satellite}
 	}
+	
+	@misc{23,
+		title = {BQ29209},
+		autor = {Texas Instrumentals},
+		howpublished = {\url{http://www.ti.com/lit/ds/symlink/bq29209-q1.pdf}},
+		note = {Accessed: 2020-03-13}
+	}
