max7432 is ready

--- a/Template/DiplomarbeitLaTex.tex
+++ b/Template/DiplomarbeitLaTex.tex
@@ -24,10 +24,10 @@
 
 % header and footer line - no header & footer line on pages where a new chapter starts
 \pagestyle{scrheadings}
-\ohead{Design and Implementation of X}
+\ohead{Development of PDU for 6U satellite}
 \ihead{Pavel Grigorev}
 \ofoot[]{\thepage}
-\ifoot{Diploma Thesis, TU Berlin, Fachgebiet AV, 2009}
+\ifoot{Master Thesis, TU Berlin, Institut für Luft- und Raumfahrt, 2020}
 
 % set path where images are stored
 \graphicspath{{./img/}}
