--- a/Template/bib/references.bib
+++ b/Template/bib/references.bib
@@ -228,3 +228,10 @@
 		howpublished = {\url{http://www.ti.com/lit/ds/symlink/bq29209-q1.pdf}},
 		note = {Accessed: 2020-03-13}
 	}
+	
+		@misc{24,
+			title = {MAX4372},
+			autor = {Maxim integrated},
+			howpublished = {\url{https://datasheets.maximintegrated.com/en/ds/MAX4372-MAX4372T.pdf}},
+			note = {Accessed: 2020-03-22}
+		}
