--- a/Template/misc/acronyms.tex
+++ b/Template/misc/acronyms.tex
@@ -3,6 +3,7 @@
 \begin{tabbing}
 spacespacespace \= space \kill
 3GPP	 \> 	3rd Generation Partnership Project	 \\
+ADC  \> Analog to Digital Converter\\
 AJAX	\>	Asynchronous JavaScript and XML \\
 API	 \> 	Application Programming Interface	 \\
 AS	\>	Application Server \\
