--- a/Template/misc/titlepage.tex
+++ b/Template/misc/titlepage.tex
@@ -30,20 +30,24 @@ http://www.mse.tu-berlin.de\\
 {\LARGE Pavel Grigorev}
 \\
 \vspace*{0.5cm}
-Matriculation Number: 1234567\\
-01.01.2010\\ % 	date of submission
+Matriculation Number: 0399092\\
+25.05.2020\\ % 	date of submission
 \vspace*{1.0cm}
+
 
 Supervised by\\
 Prof. Dr. -Ing. Klaus Brieß\\
 \vspace*{0.5cm}
+
+Assistant Supervisor\\
+M.Sc.-Ing. Marc Lehmann
+\vspace*{0.5cm}
+
 Assistant Supervisor\\
 Dipl.-Ing. Daria Stepanova
-
-\vspace*{0.5cm}
-Assistant Supervisor\\
-Dipl.-Ing. Marc Lehmann
 \vspace{3cm}
+
+
 
 
 \end{center}
