switches sind vertig

--- a/Template/bib/references.bib
+++ b/Template/bib/references.bib
@@ -235,3 +235,35 @@
 			howpublished = {\url{https://datasheets.maximintegrated.com/en/ds/MAX4372-MAX4372T.pdf}},
 			note = {Accessed: 2020-03-22}
 		}
+		
+			@misc{25,
+				title = {MAX1231},
+				autor = {Maxim integrated},
+				howpublished = {\url{https://datasheets.maximintegrated.com/en/ds/MAX1227-MAX1231.pdf}},
+				note = {Accessed: 2020-03-28}
+			}
+			
+				@misc{26,
+					title = {TPS203x},
+					autor = {Texas Instruments},
+					howpublished = {\url{http://www.ti.com/lit/ds/symlink/tps2030.pdf}},
+					note = {Accessed: 2020-03-29}
+				}
+	
+				@misc{27,
+					title = {FPF2700},
+					autor = {Fairchild Semiconductor},
+					howpublished = {\url{https://www.mouser.com/datasheet/2/149/FPF2700-1009146.pdf}},
+					note = {Accessed: 2020-03-31}
+				}
+				
+					@misc{28,
+						title = {TPS1H200A},
+						autor = {Texas Instrumentals},
+						howpublished = {\url{http://www.ti.com/lit/ds/symlink/tps1h200a-q1.pdf}},
+						note = {Accessed: 2020-04-4}
+					}
+	
+	
+
+	
