conclusion geschriben. voraussetzung korregirt.

--- a/Template/bib/references.bib
+++ b/Template/bib/references.bib
@@ -264,6 +264,24 @@
 						note = {Accessed: 2020-04-4}
 					}
 	
+			@misc{29,
+				title = {MAX7328},
+				autor = {Maxim integrated},
+				howpublished = {\url{https://datasheets.maximintegrated.com/en/ds/MAX7328-MAX7329.pdf}},
+				note = {Accessed: 2020-04-5}
+			}
 	
+	
+			@misc{30,
+				title = {ADUM1250},
+				autor = {Analog},
+				howpublished = {\url{https://www.analog.com/media/en/technical-documentation/data-sheets/ADUM1250_1251.pdf}},
+				note = {Accessed: 2020-04-5}
+			}
 
-	
+			@misc{31,
+				title = {MAX14850},
+				autor = {Maxim Integrated},
+				howpublished = {\url{https://datasheets.maximintegrated.com/en/ds/MAX14850.pdf}},
+				note = {Accessed: 2020-04-5}
+			}
