Hab Marc's komments korregirt

--- a/Template/bib/references.bib
+++ b/Template/bib/references.bib
@@ -191,10 +191,10 @@
 	note = {ISBN: 3-540-19475-4}
 }
 	@misc{19,
-	title = {LMZ14202EXT},
-	autor = {Texas Instrumentals},
-	howpublished = {\url{http://www.ti.com/lit/ds/symlink/lmz14202ext.pdf}},
-	note = {Accessed: 2020-03-6}
+	title = {LT1616},
+	autor = {Linear Technology},
+	howpublished = {\url{https://www.analog.com/media/en/technical-documentation/data-sheets/lt1616fs.pdf}},
+	note = {Accessed: 2020-05-8}
 }
 
 @article{20,
@@ -284,4 +284,10 @@
 				autor = {Maxim Integrated},
 				howpublished = {\url{https://datasheets.maximintegrated.com/en/ds/MAX14850.pdf}},
 				note = {Accessed: 2020-04-5}
+			}
+			@misc{32,
+				title = {Managing Inrush Current},
+				autor = {Texas Instruments},
+				howpublished = {\url{http://www.ti.com/lit/an/slva670a/slva670a.pdf?&ts=1589049290548}},
+				note = {Accessed: 2020-05-9}
 			}
