--- a/Template/misc/abstract_de.tex
+++ b/Template/misc/abstract_de.tex
@@ -8,10 +8,10 @@
 \vspace*{0.2cm}
 
 \noindent 
-Das Stromversorgungssystem ist ein entscheidendes Element für den Erfolg einer Weltraummission. Die Hauptverantwortung von Stromversorgungssystem (EPS) ist die Energieerzeugung, -steuerung und -verteilung für einen Satelliten während der Mission. In Abhängigkeit von den Missionsspezifikationen ist EPS für den Umgang mit verschiedenen Energiebussen und -lasten verantwortlich und muss allen Subsystemen und Nutzlasten des Raumfahrzeugs robuste Energiekanäle bereitstellen. Das Stromversorgungssystem ist auch für die Sammlung und Analyse von Gesundheitsinformationen verantwortlich.
+Das Stromversorgungssystem ist ein entscheidendes Element für den Erfolg einer Weltraummission. Die Hauptverantwortung vom Stromversorgungssystem (EPS) ist die Energieerzeugung, -steuerung und -verteilung für einen Satelliten während der Mission. In Abhängigkeit von den Missionsspezifikationen ist die EPS für den Umgang mit verschiedenen Energiebussen und -lasten verantwortlich und muss allen Subsystemen und Nutzlasten des Raumfahrzeugs robuste Energiekanäle bereitstellen. Das Stromversorgungssystem ist auch für die Sammlung und Analyse von Gesundheitsinformationen verantwortlich.
 \\
 
-Aktuelle Arbeiten widmen sich der Entwicklung eines neuen EPS für 6 Unit CubeSat. Die vorläufige Idee besteht darin, das EPS in zwei Module zu unterteilen: Power Distribution (PDU) und Power Processing Unit (PPU). Während die PPU für das Aufladen der Batterie, die Energieumwandlung aus den Solarzellen und die Stromverarbeitung verantwortlich ist, wird die PDU für die Steuerung und die Stromüberwachung zuständig sein. Die vorliegende Arbeit befasst sich mit dem architektonischen Entwurf eines gesamten Systems, wobei der Schwerpunkt auf dem Entwurf einer Energieverteilungseinheit liegt, die für verschiedene Missionen einstellbar ist und für ein Power-Handling verantwortlich ist.
+Aktuelle Arbeiten widmen sich der Entwicklung eines neuen EPS für einen 6 Unit CubeSat. Die vorläufige Idee besteht darin, das EPS in zwei Module zu unterteilen: Power Distribution (PDU) und Power Processing Unit (PPU). Während die PPU für das Aufladen der Batterie, die Energieumwandlung aus den Solarzellen und die Stromverarbeitung verantwortlich ist, wird die PDU für die Steuerung und die Spannungsaufbereitung zuständig sein. Die vorliegende Arbeit befasst sich mit dem architektonischen Entwurf eines vollständigen Systems, wobei der Schwerpunkt auf dem Entwurf einer Energieverteilungseinheit liegt, die für verschiedene Missionen einstellbar ist und für ein Power-Handling verantwortlich ist.
 \\
 
-Diese Arbeit zielt darauf ab, eine vollständige Design-Iteration einer PDU des 6-Einheiten-CubeSat-EPS bereitzustellen. Es beginnt mit der Analyse des Leistungsbudgets des 6U-Satelliten. Danach wird die Architektur des EPS-Verteilers überprüft. Auf der Entwurfsseite werden die elektrische Schaltung und die Leiterplatte der Stromverteilungseinheit entwickelt, hergestellt und getestet..
+Diese Arbeit zielt darauf ab, eine vollständige Design-Iteration einer PDU des 6 Unit CubeSat EPS bereitzustellen. Es beginnt mit der Analyse des Leistungsbudgets des 6U-Satelliten. Danach wird die Architektur des EPS-Verteilers überprüft. Auf der Entwurfsseite werden die elektrische Schaltung und die Leiterplatte der Stromverteilungseinheit entwickelt, hergestellt und getestet.
