--- a/Template/misc/thanx.tex
+++ b/Template/misc/thanx.tex
@@ -15,13 +15,13 @@ Reuchlinstraße 10-11\\
 \end{center}
 \vspace*{0.5cm}
 
-\noindent This dissertation originated in cooperation with the German Orbital Systems.
+\noindent This Master Thesis originated in cooperation with the German Orbital Systems.
 
 \vspace*{1cm}
 \noindent 
 First, I would like to express my gratitude to Prof. Klaus Brieß, Head of the Chair of Space
 Technology at Technical University of Berlin, for the giving support during this thesis and
-the lectures in Raumfahrt Antribe.
+the lectures in Propulsion subsystems.
 I would like to thank Walter Ballheimer CEO - German Orbital Systems for giving me the opportunity to carry out state of the art research in this company. I express my gratitude to Dipl.-Ing. Daria Stepanova Senior.-Ing of German Orbital Systems for giving me
 the opportunity to carry out this research project. I would like to thank Marc Lehmann for his constant support and feedback in the revision  for this thesis. Their gratitude helped me to conclude this interesting work in a very interesting space area.
 \\
