--- a/Template/misc/abstract.tex
+++ b/Template/misc/abstract.tex
@@ -9,13 +9,13 @@
 
 \noindent
 
-Electrical Power System is a critical element in the success of a space mission. The main responsibility of Electrical Power System (EPS) is the energy generation, control and distribution for a satellite during the mission. Depending on a mission specifics, EPS is responsible for handling different power busses and loads and shall provide robust power channels to all spacecraft subsystems and payload. The Electrical Power System is also responsible for healthcare information collection and analysis. 
+Electrical Power System is a critical element in the success of a space mission. The main responsibility of an Electrical Power System (EPS) is the energy generation, control and distribution for a satellite during the mission. Depending on a mission specifics, EPS is responsible for handling different power busses and loads and shall provide robust power channels to all spacecraft subsystems and payload. The Electrical Power System is also responsible for healthcare information collection and analysis. 
 \\
 
-Current work is dedicated to the development of a new EPS for 6 Unit CubeSat. Preliminary idea is to divide the EPS into two modules: Power Distribution (PDU) and Power Processing Unit (PPU). While PPU will be responsible for battery charging, energy conversion from the solar cells, power processing, PDU will be in charge of control and power monitoring. The present work will cover an architectural design of a whole system, while will be focusing on the design of a power distribution unit, which will be adjustable for different missions and responsible for a power handling.
+Current work is dedicated to the development of a new EPS for the 6 Unit CubeSat. The preliminary idea is to divide the EPS into two modules: Power Distribution (PDU) and Power Processing Unit (PPU). While PPU will be responsible for battery charging, energy conversion from the solar cells and power processing, PDU will be in charge of control and power monitoring. The present work will cover an architectural design of a whole system, while the main focus will be on the design of a Power Distribution Unit, which will be adjustable for different missions and responsible for a power handling.
 \\
 
-This thesis aims to provide a full design iteration of a PDU of the 6 Unit CubeSat EPS. It will start with power budget analysis of 6U satellite. After that, the architecture of EPS distribution board will be reviewed. From the design side, electrical circuit and PCB of power distribution unit will be developed, manufactured and tested.
+This thesis aims to provide a full design iteration of a PDU of the 6 Unit CubeSat EPS. It will start with a power budget analysis of 6U satellite. After that, the architecture of EPS distribution board will be reviewed. From the design side, electrical circuit and PCB of power distribution unit will be developed, manufactured and tested.
 \\
 \\
 Keywords: Electrical Power System, 6 Unit CubeSat, Power Distribution, PCB design.
