added figures references in the 2nd Kapitel

--- a/Template/bib/references.bib
+++ b/Template/bib/references.bib
@@ -149,10 +149,10 @@
 
 
 @misc{14,
-	title = {Charging Lithium-ion},
-	autor = {Isidor Buchmann},
-	howpublished = {\url{https://batteryuniversity.com/learn/article/charging_lithium_ion_batteries}},
-	note = {Accessed: 2020-02-25}
+	title = {How to charge Battery properly},
+	autor = {DV-power},
+	howpublished = {\url{https://www.dv-power.com/how-to-charge-batteries-properly/}},
+	note = {Accessed: 2020-05-10}
 	
 }
 
