Grammar check, 2 chapter Dc-DC

--- a/Template/misc/acronyms.tex
+++ b/Template/misc/acronyms.tex
@@ -6,20 +6,23 @@ spacespacespace \= space \kill
 ADC  \> Analog to Digital Converter\\
 ARM \>  Antenna release mechanism\\
 EPS \>      Electrical Power System\\
+EGSE \> Electrical Ground Support Equipment\\
 GOS \> German Orbital Systems\\
 I$^2$C \>   Inter-Integrated Circuit\\
+IC \>  Integrated Circuit\\
 MPPT \>    Maximum Power Point Tracking\\
 MSB \>      Most Significant Bit\\
 LSB \>      Least Signigicant Bit\\
+OBC \> On-Board Computer\\
+OBC-PH \> On-Board Computer Payload Handling\\
 PCB \> Printed Circuit Board\\
 PPU \> Power Processing Unit\\
 PDU \> Power Distribution Unit\\
 PSU \> Power Source Unit\\
 SPI \> Serial Peripheral Interface\\ 
-OBC \> On-Board Computer\\
-OBC-PH \> On-Board Computer Payload Handling\\
+
 UHF \> Ultra High Frequency\\
-EGSE \> Electrical Ground Support Equipment\\
+
 
 \end{tabbing}
 \endinput
