Kapitel 3 Grammar fertig

--- a/Template/misc/acronyms.tex
+++ b/Template/misc/acronyms.tex
@@ -5,6 +5,7 @@ spacespacespace \= space \kill
 
 ADC  \> Analog to Digital Converter\\
 ARM \>  Antenna release mechanism\\
+CAN \> Controller Area Network\\
 EPS \>      Electrical Power System\\
 EGSE \> Electrical Ground Support Equipment\\
 GOS \> German Orbital Systems\\
