--- a/Template/misc/thanx.tex
+++ b/Template/misc/thanx.tex
@@ -20,17 +20,15 @@ Reuchlinstraße 10-11\\
 \vspace*{1cm}
 \noindent 
 First, I would like to express my gratitude to Prof. Klaus Brieß, Head of the Chair of Space
-Technology at Technical University of Berlin, for the giving support during this thesis and
-the lectures in Propulsion subsystems.
-I would like to thank Walter Ballheimer CEO - German Orbital Systems for giving me the opportunity to carry out state of the art research in this company. I express my gratitude to Dipl.-Ing. Daria Stepanova Senior.-Ing of German Orbital Systems for giving me
-the opportunity to carry out this research project. I would like to thank Marc Lehmann for his constant support and feedback in the revision  for this thesis. Their gratitude helped me to conclude this interesting work in a very interesting space area.
+Technology at Technical University of Berlin, for his support of this thesis.
+I would like to thank Walter Ballheimer CEO of German Orbital Systems for giving me the opportunity to carry out state of the art research. I express my gratitude to Dipl.-Ing. Daria Stepanova, Senior Engineer of German Orbital Systems of her guidance and help for this research project. I would like to thank Marc Lehmann for his constant support and feedback in the revision  for this thesis. Their gratitude helped me to conclude this interesting work in a very interesting space area.
 \\
 \\
-Special thanks to the MSE team for all the support during these years,  pecially Dipl.
+I am very thankful for the MSE team and all their support during these years,  especially Dipl.
 Ing. Cem Avsar and Dipl.-Kfrr. Olga Homakova and Nicole Lange. They continuously offered support and
 motivation during the master studies.
 \\
 \\
-Last but not least, I would like to thank my family, specially my grandfather Vladimir, father Alexander
-and mother Elena for all the support on every decision that I have taken, for always being
+Last but not least, I would like to thank my family, especially my grandfather Vladimir, father Alexander
+and mother Elena for supporting on every decision that I have taken and for always being
 there. I dedicate this thesis to them.
